[package]
name = "asset-manager"
authors = ['Metaverse Network <https://github.com/bit-country>']
description = 'Metaverse Network pallet for asset management.'
edition = '2021'
homepage = 'https://metaverse.network'
repository = 'https://github.com/bit-country'
version = '0.1.0'


[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true }
scale-info = { workspace = true }
codec = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
primitives = { package = "bit-country-primitives", path = "../../primitives/metaverse", default-features = false }
xcm = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
hex = { workspace = true }
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "serde",
    "log/std",
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "frame-support/std",
    "frame-system/std",
    "primitives/std",
    "xcm/std",
]