[package]
authors = ['Bit Country <https://github.com/bit-country>']
description = 'Bit Country pallet for block logic.'
edition = '2018'
homepage = 'https://bit.country'
license = 'Unlicense'
name = 'pallet-auction'
repository = 'https://github.com/bit-country'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.119", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }

pallet-balances = { version = "3.0.0", default-features = false }
pallet-timestamp = { version = "3.0.0", default-features = false }
pallet-transaction-payment = { version = "3.0.0", default-features = false }
frame-executive = { version = "3.0.0", default-features = false }
sp-api = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-version = { version = "3.0.0", default-features = false }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false }
primitives = { package = "bit-country-primitives", path = "../primitives", default-features = false }

# orml packages
orml-nft = { default-features = false, version = '0.4.0' }
pallet-nft = { default-features = false, package = 'pallet-nft', path = '../nft' }
pallet-continuum = { default-features = false, package = 'pallet-continuum', path = '../continuum' }
auction-manager = { default-features = false, package = 'auction-manager', path = '../../traits/auction-manager' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-core/std',
    'pallet-balances/std',
    'auction-manager/std',
    'orml-nft/std',
    'pallet-nft/std',
    'pallet-continuum/std',
]