[package]
authors = ['Bit Country <https://github.com/bit-country>']
description = 'Bit Country pallet for country logic.'
edition = '2018'
homepage = 'https://bit.country'
license = 'Unlicense'
name = 'pallet-country'
repository = 'https://github.com/bit-country'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.119", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
pallet-balances = { version = "3.0.0", default-features = false }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false }
pallet-sudo = { version = "3.0.0", default-features = false }
pallet-timestamp = { version = "3.0.0", default-features = false }
pallet-transaction-payment = { version = "3.0.0", default-features = false }
sp-api = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-session = { version = "3.0.0", default-features = false }
sp-version = { version = "3.0.0", default-features = false }
primitives = { package = "bit-country-primitives", path = "../primitives", default-features = false }

# local packages
bc-country = { path = "../../traits/bc-country", default-features = false }

# Orml packages
orml-traits = { default-features = false, version = '0.4.0' }
orml-currencies = { default-features = false, version = '0.4.0' }
orml-tokens = { default-features = false, version = '0.4.0' }

[dependencies.nft]
default-features = false
package = 'pallet-nft'
path = '../nft'
version = '2.0.0-rc6'

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'sp-io/std',
    'sp-core/std',
    "sp-std/std",
    "orml-traits/std",
    "orml-tokens/std",
    'nft/std',
    'primitives/std'
]
