[package]
authors = ['Bit Country <https://github.com/bit-country>']
description = 'Bit Country pallet for block logic.'
edition = '2018'
homepage = 'https://bit.country'
license = 'Unlicense'
name = 'pallet-block'
repository = 'https://github.com/bit-country'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
# sp-runtime = { version = "2.0.0", default-features = false }
sp-std = {  git = "https://github.com/paritytech/substrate", default-features = false }
frame-system = { default-features = false, version = "3.0.0" }
frame-support = {default-features = false, version = "3.0.0" }
pallet-aura = { default-features = false, version = "3.0.0"}
pallet-balances = { default-features = false, version = "3.0.0" }
pallet-grandpa = { default-features = false, version = "3.0.0"}
pallet-randomness-collective-flip = { default-features = false, version = "3.0.0"}
pallet-timestamp = {  default-features = false, version = "3.0.0"}
pallet-transaction-payment = { default-features = false, version = "3.0.0"}
# frame-executive = { version = "2.0.0", default-features = false, version = "3.0.0"}
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { default-features = false, version = "3.0.0"}
sp-block-builder = { default-features = false, version = "3.0.0"}
sp-consensus-aura = { default-features = false, version = "0.9.0" }
sp-core = { default-features = false, version = "3.0.0" }
sp-inherents = { default-features = false, version = "3.0.0" }
sp-runtime = { default-features = false, version = "3.0.0" }
sp-offchain = { default-features = false, version = "3.0.0" }
sp-session = { default-features = false, version = "3.0.0"}
sp-transaction-pool = { default-features = false, version = "3.0.0"}
sp-version = { default-features = false, version = "3.0.0"}

[dependencies.unique-asset]
default-features = false
package = 'pallet-unique-asset'
path = '../uniqueAsset'
version = '2.0.0-rc6'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-core/std',
]