[package]
authors = ['Metaverse Network <https://github.com/bit-country>']
description = 'Metaverse Network pallet for country logic.'
edition = '2021'
homepage = 'https://metaverse.network'
license = 'Unlicense'
name = 'pallet-continuum'
repository = 'https://github.com/bit-country'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { workspace = true, optional = true, default-features = false, features = ["derive"] }
codec = { workspace = true }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
frame-executive = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-arithmetic = { workspace = true }
sp-session = { workspace = true }
primitives = { package = "bit-country-primitives", path = "../../primitives/metaverse", default-features = false }

# Orml packages
orml-traits = { workspace = true }
orml-currencies = { workspace = true }
orml-tokens = { workspace = true }
orml-nft = { workspace = true }

# Other pallets

pallet-nft = { default-features = false, package = 'pallet-nft', path = '../nft' }
pallet-metaverse = { default-features = false, package = 'pallet-metaverse', path = '../metaverse' }
auction-manager = { default-features = false, package = 'auction-manager', path = '../../traits/auction-manager' }
core-primitives = { path = "../../traits/core-primitives", default-features = false }


[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'orml-traits/std',
    'orml-tokens/std',
    'pallet-nft/std',
    'auction-manager/std',
    'primitives/std',
    'sp-arithmetic/std',
    "scale-info/std",
]
