[package]
authors = ['Bit Country <https://github.com/bit-country>']
description = 'Bit Country pallet for country logic.'
edition = '2018'
homepage = 'https://bit.country'
license = 'Unlicense'
name = 'pallet-country'
repository = 'https://github.com/bit-country'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
# sp-runtime = { version = "2.0.0", default-features = false }
sp-runtime  = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1"}
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1"}
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1"}
pallet-timestamp = {  git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1"}
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1"}
# frame-executive = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1"}
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1"}
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1"}
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1"}
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1"}
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1"}
primitives = { package = "bit-country-primitives", path = "../primitives", default-features = false }


# Orml packages
orml-traits = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "sw/rococo-v1" }
orml-currencies = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "sw/rococo-v1" }
orml-tokens = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "sw/rococo-v1" }


# # Cumulus dependencies
# cumulus-primitives = { git = "https://github.com/paritytech/cumulus",  default-features = false, branch = "rococo-v1" }

# # Polkadot dependencies
# xcm = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }
# xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }

[dependencies.unique-asset]
default-features = false
package = 'pallet-unique-asset'
path = '../uniqueAsset'
version = '2.0.0-rc6'

[dependencies.nft]
default-features = false
package = 'pallet-nft'
path = '../nft'
version = '2.0.0-rc6'

[features]
default = ['std']
std = [
    'codec/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'sp-core/std',
    "sp-std/std",
    "orml-traits/std",
	"orml-tokens/std",
    'unique-asset/std',
    'nft/std',
    'primitives/std'
]
