[package]
authors = ['Bit Country <https://github.com/bit-country>']
description = 'Bit Country pallet for country logic.'
edition = '2018'
homepage = 'https://bit.country'
license = 'Unlicense'
name = 'pallet-country'
repository = 'https://github.com/bit-country'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
# sp-runtime = { version = "2.0.0", default-features = false }
sp-runtime  = { default-features = false, version = "3.0.0" }
sp-std = { default-features = false, version = "3.0.0" }
frame-system = { default-features = false, version = "3.0.0" }
frame-support = {default-features = false, version = "3.0.0" }
pallet-aura = { default-features = false, version = "3.0.0"}
pallet-balances = { default-features = false, version = "3.0.0" }
pallet-grandpa = { default-features = false, version = "3.0.0"}
pallet-randomness-collective-flip = { default-features = false, version = "3.0.0"}
pallet-timestamp = {  default-features = false, version = "3.0.0"}
pallet-transaction-payment = { default-features = false, version = "3.0.0"}
# frame-executive = { version = "2.0.0", default-features = false, version = "3.0.0"}
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { default-features = false, version = "3.0.0"}
sp-block-builder = { default-features = false, version = "3.0.0"}
sp-consensus-aura = { default-features = false, version = "0.9.0" }
sp-core = { default-features = false, version = "3.0.0" }
sp-inherents = { default-features = false, version = "3.0.0" }
sp-offchain = { default-features = false, version = "3.0.0" }
sp-session = { default-features = false, version = "3.0.0"}
sp-transaction-pool = { default-features = false, version = "3.0.0"}
sp-version = { default-features = false, version = "3.0.0"}
primitives = { package = "bit-country-primitives", path = "../primitives", default-features = false }


# Orml packages
orml-traits = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "sw/rococo-v1" }
orml-currencies = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "sw/rococo-v1" }
orml-tokens = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "sw/rococo-v1" }


# # Cumulus dependencies
# cumulus-primitives = { git = "https://github.com/paritytech/cumulus",  default-features = false, branch = "rococo-v1" }

# # Polkadot dependencies
# xcm = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }
# xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }

[dependencies.unique-asset]
default-features = false
package = 'pallet-unique-asset'
path = '../uniqueAsset'
version = '2.0.0-rc6'

[dependencies.nft]
default-features = false
package = 'pallet-nft'
path = '../nft'
version = '2.0.0-rc6'

[features]
default = ['std']
std = [
    'codec/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'sp-core/std',
    "sp-std/std",
    "orml-traits/std",
	"orml-tokens/std",
    'unique-asset/std',
    'nft/std',
    'primitives/std'
]