[package]
authors = ['Metaverse Network <https://github.com/bit-country>']
description = 'Metaverse Network pallet for crowdloan reward logic.'
edition = '2021'
homepage = 'https://metaverse.network'
license = 'Unlicense'
name = 'pallet-crowdloan'
repository = 'https://github.com/bit-country'
version = '2.0.0-rc6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { workspace = true }
serde = { workspace = true, optional = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-version = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
substrate-fixed =  { workspace = true }
# local packages
core-primitives = { path = "../../traits/core-primitives", default-features = false }
primitives = { package = "bit-country-primitives", path = "../../primitives/metaverse", default-features = false }
pallet-balances = { workspace = true, optional = true }
pallet-vesting = { workspace = true }


[dependencies.auction-manager]
default-features = false
package = 'auction-manager'
path = '../../traits/auction-manager'
version = '2.0.0-rc6'

[features]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
default = ['std']
std = [
    'codec/std',
    "serde",
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-core/std',
    'core-primitives/std',
    'primitives/std',
    'sp-io/std',
    'pallet-balances/std',
    'pallet-vesting/std',
    'auction-manager/std',
    'frame-benchmarking/std'
]